# polydoc

./: Cargo.toml  README.md  test.js
src/: lib.rs  main.rs
src/polydoc_core/: Cargo.toml
src/polydoc_core/src/: docparsing.rs  lib.rs  merge.rs
src/polydoc_js/: Cargo.toml
src/polydoc_js/src/: lib.rs
src/polydoc_rust/: Cargo.toml
src/polydoc_rust/src/: lib.rs
tests/: polydoc_js_tests.rs  polydoc_rust_tests.rs
tests/apis/: js_api.js  rust_api.rs
