[package]
name = "polydoc"
version = "0.1.0"
authors = ["Pirh"]

[lib]
name = "polydoc"
path = "src/lib.rs"

[[bin]]
name = "polydoc"
path = "src/main.rs"
doc = false

[dependencies]
clap = "2.25"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"

[dependencies.polydoc_core]
path = "src/polydoc_core"

[dependencies.polydoc_js]
path = "src/polydoc_js"

[dependencies.polydoc_rust]
path = "src/polydoc_rust"